made it working

--- a/sso-client-app-1/src/main/resources/templates/index.html
+++ b/sso-client-app-1/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 	</nav>
 
 	<div class="container">
-		<label>Welcome ! </label> <br /> <a th:href="@{/foos/}" class="btn btn-primary">Login</a>
+		<a th:href="@{/foos/}" class="btn btn-primary">Login</a>
 	</div>
 </body>
 </html>
